<resources>
    <string name="app_name">SignMeIn</string>

    <string name="hub_name">Hub</string>
    <string name="client_name">Sign In</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SignMeIn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="motto">Making Sign-Ins Better</string>
    <string name="mission_statement">SignMeIn is developed to help make sign-ins easier and more accurate, and works to serve both schools, clubs, and volunteer events. </string>

    <string name="email">signmeinapp@gmail.com</string>

    <string name="menu_home">Sign In</string>
    <string name="menu_hub">Hub</string>

    <string name="menu_contact">Contact Us</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="select_class">Select Class</string>

</resources>
