<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_client"
            android:icon="@drawable/ic_register"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_hub"
            android:icon="@drawable/ic_wifi_tethering"
            android:title="@string/menu_hub" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="Resources">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_feedback"
                android:title="@string/menu_contact" />
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_faq"
                android:title="@string/menu_faq" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_waving_person"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
