<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_client">

    <fragment
        android:id="@+id/nav_client"
        android:name="com.example.signmein.ClientFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/client_fragment" />

    <fragment
        android:id="@+id/nav_hub"
        android:name="com.example.signmein.ui.gallery.GalleryFragment"
        android:label="@string/menu_hub"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.signmein.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.signmein.ui.share.ShareFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_faq"
        android:name="com.example.signmein.ui.send.SendFragment"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.signmein.ui.tools.ToolsFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_send" />

</navigation>